# rap-scraper-project

./: .cache  .dockerignore  .env  .env.docker  .env.example  .gitattributes  .gitignore  .ruff.toml  AI_ONBOARDING_CHECKLIST.md  ANALYZERS_CLEANUP_ANALYSIS.md  CODE_REVIEW_SUMMARY.md  CONFIDENCE_SCORES_SUMMARY.md  Dockerfile  Dockerfile.dev  Dockerfile.k8s  Dockerfile.prod  ExplainMEPython.ini  FEATURE_ENGINEERING_GUIDE.md  GIT_BEST_PRACTICES.md  INTERVIEW_PREPARATION.md  INTERVIEW_PREP_GUIDE.md  LAPTOP_INSTRUCTIONS.md  LINTING_AUDIT_BEFORE.md  Makefile  PROJECT_DOCUMENTATION.md  PROJECT_EVOLUTION.md  PROJECT_LEARNING_GUIDE.md  README.md  REFACTORING_PLAN.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  STRUCTURE.md  TASK_FOR_CLAUDE_AGENT.md  TECH_SUMMARY.md  WEEKLY_PLAN.md  ai_analysis_comprehensive_report_20250828_201848.json  analyze_results.py  api.py  bulk_spotify_enhancement.py  check_analysis_status.py  (+62 more)
.ai_examples/: analyze_context.json  debug_context.json  develop_context.json  refactor_context.json
.github/: INTERVIEW_PREP_CODE_REVIEW.md  ISSUE_CODE_REVIEW_ML_SCRIPTS.md
.specify/: project.yaml
analysis_results/: complexity_analysis_20250819_083403.csv  genre_distribution_20250819_083403.csv  mood_analysis_20250819_083403.csv  quality_metrics_20250819_083403.csv  top_artists_20250819_083403.csv
config/: mlops_config.json
data/: .cache  rap_artists.json  remaining_artists.json  spotify_enhancement_checkpoint.json  test_artists.json
docs/: AI_ONBOARDING_CHECKLIST.md  AI_README.md  API.md  API_ANALYSIS_SUMMARY.txt  API_CONSOLIDATION_PLAN.md  API_DUPLICATION_ANALYSIS.md  ARCHITECTURE.md  CONFIG_GUIDE.md  CUSTOM_ML_MODELS_PLAN.md  Chaos_Testing_TO_DO.md  DOCKERIGNORE_FIXED.md  DOCKER_OPTIMIZATION_STATUS.md  DOCKER_REFACTORED.md  DOCKER_SETUP.md  DOCKER_UPDATES_SUMMARY.md  FAANG_CODE_REVIEW_GUIDE_RU.md  FUTURE_ROADMAP.md  FUTURE_ROADMAP_ML.md  GEMMA_SETUP.md  GIT_WORKFLOW_GUIDE.md  GO Migration TO DO.md  INSTALLATION.md  KAFKA, RABBIT, CELERY TODO.md  LEARNING_MODEL_PLAN.md  LINTER_QUICK_START.md  LINTING_DECISIONS.md  MAKEFILE_UPDATED.md  NEW_FEATURE.md  PGVECTOR_CONNECTION.md  PHASE3_TODO.md  POETRY_GUIDE.md  PROGRESS.md  PROJECT_ORGANIZATION_COMPLETE.md  SWAGGER_TODO.md  TO_DO.md  VSCODE_INTEGRATION.md  claude.md  ПОДГОТОВКА_К_СОБЕСУ_КОД_РЕВЬЮ.md
enhanced_data/: enhanced_songs_20250819.jsonl
gitops/: README.md  install-argocd.ps1  install-argocd.sh
k8s/: ingress.yaml  namespace-and-config.yaml
langchain_results/: enhanced_songs_20250819_081650.jsonl  enhanced_songs_20250819_082922.jsonl  test_stats_20250819_081650.json  test_stats_20250819_082922.json
logs/: before_linting.txt
models/: __init__.py  conditional_generation.py  quality_prediction.py  style_transfer.py  test_qwen.py  trend_analysis.py  trend_analysis_report.json
monitoring/: README.md  README_UPDATED.md  __init__.py  check_analysis_status.py  prometheus.yml
multi-region/: README.md  deploy-multi-region.ps1  test-multi-region.py
results/: .ai_context.json  .ai_context_cache.pkl  .ai_context_pro.json  ai_analysis_comprehensive_report_20250828_201904.json  ai_context_manager_enterprise_summary.md  ai_project_analyzer_enterprise_summary.md  ai_tools_improvement_report.md  ai_workspace.json  analysis_cache.pkl  analysis_progress_v2.json  batch_features_demo.json  batch_results.json  benchmark_results.json  code_audit_report.json  confidence_test_updated.json  database_diagnostics_update_report.md  dependency_updates.json  file_organization_report_20250829_090549.json  file_organization_report_20250829_090633.json  project_analysis.json  (+11 more)
(+217 files in other folders)
